# fuzzyclock

./: .gitignore  COPYING  README  configure.ac  fuzzyclock.c
src/: Makefile.am  fuzzyclock.c  fuzzyclock.h  main.c
tests/: Makefile.am  check_fuzzyclock.c
